@@ -2,6 +2,7 @@
 	* Fix bug #15174 (old bug tracker): Doesn't allow update of user group
 	* Fix bug #10435 (old bug tracker): Error messages when country is changed while no user group is selected in frontend
 	* Cleanup line breaks in rsaauth.js
+	* Fix bug #14020 (old bug tracker): user groups from userGroupAfterConfirmation are visible in the invitation form
 
 2012-04-08 Stanislas Rolland  <typo3@sjbr.ca>
 	* Add feature #28370: replyTo feature for mails sent to user
